@@ -149,6 +149,7 @@ tests/test-rescan-r/Makefile
 tests/test-quotes/Makefile
 tests/test-ccl/Makefile
 tests/test-extended/Makefile
+tests/test-c++-yywrap/Makefile
 dnl --new-test-here-- This line is processed by tests/create-test.
 )
 
